[package]
name = "headers-accept-encoding"
version = "0.3.8" # don't forget to update html_root_url
description = "Hypper typed HTTP headers with Accept-Encoding support"
license = "MIT"
readme = "README.md"
homepage = "https://hyper.rs"
repository = "https://github.com/hyperium/headers"
authors = ["Sean McArthur <sean@seanmonstar.com>", "Jose Quintana <joseluisq.net>"]
keywords = ["http", "headers", "hyper", "hyperium"]
categories = ["web-programming"]

[workspace]
members = [
    "./",
    "headers-core",
]

[dependencies]
http = "0.2.0"
headers-core = "0.2"
base64 = "0.13"
bitflags = "1.0"
itertools = "0.9"
bytes = "1"
mime = "0.3.14"
sha1 = "0.10"
httpdate = "1"

[features]
nightly = []
